--- a/1-Ramp_Up/Python/4-Funciones/Practica/Ejercicios_funciones.ipynb
+++ b/1-Ramp_Up/Python/4-Funciones/Practica/Ejercicios_funciones.ipynb
@@ -18,16 +18,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Miércoles'"
+       "'El día de la semana introducido no es correcto'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
     "        return semana[dia-1]\n",
     "\n",
     "\n",
-    "dia_semana(4)"
+    "dia_semana(8)"
    ]
   },
   {
@@ -68,18 +68,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20 19 18 17 16 15 14 13 12 11 10 9 8 7 6 5 4 3 2 1\n",
-      "19 18 17 16 15 14 13 12 11 10 9 8 7 6 5 4 3 2 1\n",
-      "18 17 16 15 14 13 12 11 10 9 8 7 6 5 4 3 2 1\n",
-      "17 16 15 14 13 12 11 10 9 8 7 6 5 4 3 2 1\n",
-      "16 15 14 13 12 11 10 9 8 7 6 5 4 3 2 1\n",
       "15 14 13 12 11 10 9 8 7 6 5 4 3 2 1\n",
       "14 13 12 11 10 9 8 7 6 5 4 3 2 1\n",
       "13 12 11 10 9 8 7 6 5 4 3 2 1\n",
@@ -103,7 +98,7 @@
     "\n",
     "def piramide_numeros(numero:int)->None:\n",
     "    \"\"\"\n",
-    "    Esta imprime la pirámide de un número.\n",
+    "    Esta función imprime la pirámide de un número.\n",
     "    \n",
     "    Input:\n",
     "        numero: int\n",
@@ -122,7 +117,7 @@
     "        #se vuelve a llamar a la función pasando como parámetro el numero inferior\n",
     "        piramide_numeros(numero-1)    \n",
     "        \n",
-    "piramide_numeros(20)"
+    "piramide_numeros(15)"
    ]
   },
   {
@@ -466,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +483,7 @@
     "    La función recibe como parametro tantas palabras como se quiera.\n",
     "    \n",
     "    Input:\n",
-    "        *palabras: str. Una o mas palabras a concatenar\n",
+    "        *palabras: str. Una o más palabras a concatenar\n",
     "        \n",
     "    Output:\n",
     "        str\n",
@@ -522,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +544,7 @@
    "source": [
     "def fibonacci(numero:int)->int:\n",
     "    \"\"\"\n",
-    "    Devulve la el valor de la serie de fibonacci\n",
+    "    Devuelve la el valor de la serie de fibonacci\n",
     "    \n",
     "    Input:\n",
     "        numero: int\n",
