--- a/1-Ramp_Up/Python/5-OOP/Teoria/Clases_Objetos.ipynb
+++ b/1-Ramp_Up/Python/5-OOP/Teoria/Clases_Objetos.ipynb
@@ -589,11 +589,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'marca': 'Toyota', 'puertas': 5, 'gasolina': False}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Toyota'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "class Coche:\n",
+    "    #Atributos de clase\n",
+    "    ruedas = 4\n",
+    "    retrovisores = 3\n",
+    "\n",
+    "    def __init__(self, marca:str, puertas:int, gasolina:bool):\n",
+    "        #Atributos de instancia\n",
+    "        self.marca = marca\n",
+    "        self.puertas = puertas\n",
+    "        self.gasolina = gasolina\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return self.marca\n",
+    "        \n",
+    "        \n",
+    "mi_coche = Coche(\"Toyota\",5,False)\n",
+    "\n",
+    "print(mi_coche.__dict__)\n",
+    "str(mi_coche)"
    ]
   },
   {
@@ -688,11 +724,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17500.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "import datetime\n",
+    "\n",
+    "class Coche:\n",
+    "    ruedas = 4\n",
+    "\n",
+    "    def __init__(self, marca_coche:str, num_puertas:int, anyo_compra:int, precio:float):\n",
+    "        self.marca_coche = marca_coche\n",
+    "        self.num_puertas = num_puertas\n",
+    "        self.anyo_compra = anyo_compra\n",
+    "        self.precio = precio\n",
+    "    \n",
+    "    def show_caracs(self, var_1):\n",
+    "        return \"Marca: \" + self.marca_coche + \". Num Puertas: \" + str(self.num_puertas) + \". Num Ruedas: \" + str(self.ruedas) + '. Var_1 por aquí ' + str(var_1)\n",
+    "    \n",
+    "    def precio_actual(self)->float:\n",
+    "        if (datetime.date.today().year - self.anyo_compra) <= 5:\n",
+    "            return self.precio * 0.5\n",
+    "        else:\n",
+    "            return self.precio * 0.30\n",
+    "        \n",
+    "             \n",
+    "mi_coche = Coche(\"Toyota\",num_puertas=5, anyo_compra=2021, precio=35000)\n",
+    "mi_coche.precio_actual()"
    ]
   },
   {
@@ -932,7 +1001,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -946,7 +1015,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
