--- a/2-Data Analysis/2-Dataframes y estadística/Teoría/1-Intro_Pandas.ipynb
+++ b/2-Data Analysis/2-Dataframes y estadística/Teoría/1-Intro_Pandas.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "a6cbc9d3-4c3c-468f-83a7-b2f47039bf2a",
    "metadata": {
     "collapsed": false,
@@ -65,7 +65,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "874c3d00-9e4b-402e-926a-d6a60d25dfe6",
    "metadata": {
     "collapsed": false,
@@ -102,7 +102,7 @@
        "array([1.5 , 1.6 , 1.75, 1.8 ])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "581e1577-74a5-4e5c-89c4-fc869ee2452b",
    "metadata": {
     "collapsed": false,
@@ -136,7 +136,7 @@
        "RangeIndex(start=0, stop=4, step=1)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "f18fe86c",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "af7e76fe-3ba4-4033-8f30-cfaf480d57aa",
    "metadata": {
     "collapsed": false,
@@ -192,10 +192,10 @@
     {
      "data": {
       "text/plain": [
-       "1.6"
+       "np.float64(1.6)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "1c5c0070-ea4e-4a48-850c-2ac178b35612",
    "metadata": {
     "collapsed": false,
@@ -219,21 +219,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1    1.60\n",
-      "2    1.75\n",
-      "3    1.80\n",
+      "Index([5, 3, 7], dtype='int64')\n",
+      "5    1.60\n",
+      "3    1.75\n",
+      "7    1.80\n",
       "dtype: float64\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Data_Science\\notebooks\\DSPT2025\\.venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3805\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3804\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3805\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3806\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mindex.pyx:167\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mindex.pyx:196\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:2606\u001b[39m, in \u001b[36mpandas._libs.hashtable.Int64HashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:2630\u001b[39m, in \u001b[36mpandas._libs.hashtable.Int64HashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[31mKeyError\u001b[39m: 0",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[28]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28mprint\u001b[39m(otra_serie.index)\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(otra_serie)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[43motra_serie\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Data_Science\\notebooks\\DSPT2025\\.venv\\Lib\\site-packages\\pandas\\core\\series.py:1121\u001b[39m, in \u001b[36mSeries.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   1118\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._values[key]\n\u001b[32m   1120\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m key_is_scalar:\n\u001b[32m-> \u001b[39m\u001b[32m1121\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_get_value\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1123\u001b[39m \u001b[38;5;66;03m# Convert generator to list before going through hashable part\u001b[39;00m\n\u001b[32m   1124\u001b[39m \u001b[38;5;66;03m# (We will iterate through the generator there to check for slices)\u001b[39;00m\n\u001b[32m   1125\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_iterator(key):\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Data_Science\\notebooks\\DSPT2025\\.venv\\Lib\\site-packages\\pandas\\core\\series.py:1237\u001b[39m, in \u001b[36mSeries._get_value\u001b[39m\u001b[34m(self, label, takeable)\u001b[39m\n\u001b[32m   1234\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._values[label]\n\u001b[32m   1236\u001b[39m \u001b[38;5;66;03m# Similar to Index.get_value, but we do not fall back to positional\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1237\u001b[39m loc = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlabel\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1239\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(loc):\n\u001b[32m   1240\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._values[loc]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Data_Science\\notebooks\\DSPT2025\\.venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3807\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m   3808\u001b[39m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc.Iterable)\n\u001b[32m   3809\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[32m   3810\u001b[39m     ):\n\u001b[32m   3811\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[32m-> \u001b[39m\u001b[32m3812\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3814\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3815\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3816\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m   3817\u001b[39m     \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n",
+      "\u001b[31mKeyError\u001b[39m: 0"
      ]
     }
    ],
    "source": [
     "otra_serie = data[1:4].copy()\n",
+    "print(otra_serie.index)\n",
     "print(otra_serie)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "48601ca0-8e76-4500-96d8-a3a60242d6de",
    "metadata": {},
    "outputs": [
@@ -245,7 +269,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "6d8c240b-7cdf-4762-92d1-4ff36936094a",
    "metadata": {
     "collapsed": false,
@@ -303,7 +327,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "c2878aa6-5316-494b-a53e-f45b1c6b4e1c",
    "metadata": {},
    "outputs": [
@@ -326,7 +350,7 @@
        "array([1.5 , 1.6 , 1.75, 1.8 ])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "3fe995f9-8d9b-4fe4-b94c-29b77f059444",
    "metadata": {},
    "outputs": [
@@ -347,13 +371,57 @@
        "array(['Jane', 'Joe', 'Susan', 'Mike'], dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.array(data.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "9266c813",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jane\n",
+      "Joe\n",
+      "Susan\n",
+      "Mike\n"
+     ]
+    }
+   ],
+   "source": [
+    "for d in data.index:\n",
+    "    print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "f228f1d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.5\n",
+      "1.6\n",
+      "1.75\n",
+      "1.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "for d in data:\n",
+    "    print(d)"
    ]
   },
   {
@@ -429,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "0f642ba3-bd09-426c-9213-9c5981ca2ad1",
    "metadata": {
     "collapsed": false,
@@ -448,7 +516,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "id": "1a2c60be-c9fc-49a9-b8a7-1c5e7c7ccb0c",
    "metadata": {
     "collapsed": false,
@@ -478,7 +546,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,17 +557,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "43fdbe6e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.5"
+       "np.float64(1.5)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "5a21ef90-4b94-4e5c-aaa7-884ad45d16ec",
    "metadata": {
     "collapsed": false,
@@ -869,12 +937,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "id": "facf1379",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total ventas 92\n",
+      "Máximas ventas Enero 15\n",
+      "Enero    15\n",
+      "dtype: int64\n",
+      "Mínimas ventas Febrero 2\n",
+      "Promedio ventas 7.666666666666667\n",
+      "Enero         15\n",
+      "Agosto         8\n",
+      "Septiembre     9\n",
+      "Octubre       10\n",
+      "Noviembre     11\n",
+      "Diciembre     12\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "serie_ventas = pd.Series({\n",
+    "    \"Enero\":15,\n",
+    "    \"Febrero\":2,\n",
+    "    \"Marzo\": 3,\n",
+    "    \"Abril\": 4,\n",
+    "    \"Mayo\": 5,\n",
+    "    \"Junio\": 6,\n",
+    "    \"Julio\": 7,\n",
+    "    \"Agosto\": 8,\n",
+    "    \"Septiembre\": 9,\n",
+    "    \"Octubre\": 10,\n",
+    "    \"Noviembre\":11,\n",
+    "    \"Diciembre\": 12 \n",
+    "})\n",
+    "\n",
+    "print('Total ventas',serie_ventas.sum())\n",
+    "print('Máximas ventas',serie_ventas.idxmax(), serie_ventas.max())\n",
+    "print(serie_ventas[serie_ventas==serie_ventas.max()])\n",
+    "print('Mínimas ventas',serie_ventas.idxmin(), serie_ventas.min())\n",
+    "print('Promedio ventas',serie_ventas.mean())\n",
+    "print(serie_ventas[serie_ventas >= serie_ventas.mean()])\n"
    ]
   },
   {
@@ -6523,7 +6631,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -6537,7 +6645,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
