--- a/1-Ramp_Up/Python/1-Basics/Teoria/Basics_II.ipynb
+++ b/1-Ramp_Up/Python/1-Basics/Teoria/Basics_II.ipynb
@@ -65,11 +65,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. Entero 9\n",
+      "2. Float 6.0\n",
+      "3. Tipo suma <class 'float'>\n",
+      "4. Multiplicacion 54.0\n",
+      "5. Potencia: 531441.0\n",
+      "6. Resto: 2\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA TU CÓDIGO"
+    "entero = 9\n",
+    "print(\"1. Entero\", entero)\n",
+    "flotante = 6.0\n",
+    "print(\"2. Float\", flotante)\n",
+    "suma = entero + flotante\n",
+    "print(\"3. Tipo suma\", type(suma))\n",
+    "mult = entero * flotante\n",
+    "print(\"4. Multiplicacion\", mult)\n",
+    "pot = entero ** flotante\n",
+    "print(\"5. Potencia:\",pot)\n",
+    "resto = 12 % 5\n",
+    "print(\"6. Resto:\",resto)"
    ]
   },
   {
@@ -174,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -588,11 +612,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n",
+      "4\n",
+      "5\n",
+      "3.141592653589793\n",
+      "28.274333882308138\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA TU CÓDIGO"
+    "import math\n",
+    "print(abs(-25))\n",
+    "print(math.floor(4.7))\n",
+    "print(math.ceil(4.3))\n",
+    "print(math.pi)\n",
+    "print(math.pi * 3**2)"
    ]
   },
   {
@@ -687,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +737,7 @@
        "True"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1215,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1249,11 +1290,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[23, 8, 5]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# AQUÍ VA TU CÓDIGO"
+    "# AQUÍ VA TU CÓDIGO\n",
+    "lista = [23,5,8]\n",
+    "sorted(lista, reverse=True)"
    ]
   },
   {
@@ -1832,7 +1886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1943,47 +1997,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Los Goonies', 'Dune', 'Las amistades peligrosas']\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA TU CÓDIGO"
+    "mis_pelis = [\"Los Goonies\", \"Dune\", \"Las amistades peligrosas\"]\n",
+    "print(mis_pelis)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA TU CÓDIGO"
+    "print(len(mis_pelis))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Los Goonies', 'Dune', 'Las amistades peligrosas', 'Las chicas de oro', 'Juego de tronos', 'Big Bang Theory']\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA TU CÓDIGO"
+    "mis_series = [\"Las chicas de oro\", \"Juego de tronos\", \"Big Bang Theory\"]\n",
+    "lista_concatenada = mis_pelis + mis_series\n",
+    "print(lista_concatenada)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Los Goonies', 'Las amistades peligrosas', 'Las chicas de oro', 'Juego de tronos', 'Big Bang Theory']\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA TU CÓDIGO"
+    "lista_concatenada.pop(1)\n",
+    "print(lista_concatenada)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Los Goonies', ['Marmitako', 'Espagetis', 'Merluza'], 'Las amistades peligrosas', 'Las chicas de oro', 'Juego de tronos', 'Big Bang Theory']\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA TU CÓDIGO"
+    "mis_platos = []\n",
+    "mis_platos.append(\"Marmitako\")\n",
+    "mis_platos.append(\"Espagetis\")\n",
+    "mis_platos.append(\"Merluza\")\n",
+    "lista_concatenada.insert(1,mis_platos)\n",
+    "print(lista_concatenada)"
    ]
   },
   {
@@ -2050,7 +2153,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.4 64-bit",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -2064,7 +2167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.9"
   },
   "nbTranslate": {
    "displayLangs": [
@@ -2104,11 +2207,6 @@
     "_Feature"
    ],
    "window_display": false
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "90139cb9a825bf3d63f6f6704e828dbd1ff7edbd4d0c6e906a71235d6efc74af"
-   }
   }
  },
  "nbformat": 4,
