--- a/1-Ramp_Up/Python/2-Flujos de control/Teoria/Flujos.ipynb
+++ b/1-Ramp_Up/Python/2-Flujos de control/Teoria/Flujos.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
      "evalue": "expected an indented block after 'for' statement on line 3 (2854770130.py, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[10], line 5\u001b[1;36m\u001b[0m\n\u001b[1;33m    if type(num) == int:\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block after 'for' statement on line 3\n"
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mif type(num) == int:\u001b[39m\n    ^\n\u001b[31mIndentationError\u001b[39m\u001b[31m:\u001b[39m expected an indented block after 'for' statement on line 3\n"
      ]
     }
    ],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -402,19 +402,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nota erronea\n"
+      "Suficiente\n"
      ]
     }
    ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "mi_nota = float(input(\"Nota:\"))\n",
+    "if mi_nota < 0 or mi_nota > 10:\n",
+    "    print('Nota errónea')\n",
+    "elif mi_nota < 5:\n",
+    "    print(\"A septiembre\")\n",
+    "else:\n",
+    "    if mi_nota < 6:\n",
+    "        print(\"Suficiente\")\n",
+    "    elif mi_nota < 7:\n",
+    "        print(\"Bien\")\n",
+    "    elif mi_nota < 9:\n",
+    "        print(\"Notable\")\n",
+    "    else:\n",
+    "        print(\"Sobresaliente\")"
    ]
   },
   {
@@ -439,14 +452,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La tarea para monday es: Ese día no es válido\n"
+      "La tarea para luneses es: Hacer la compra\n"
      ]
     }
    ],
@@ -455,7 +468,7 @@
     "\n",
     "# Usando match case\n",
     "match day.lower():\n",
-    "    case \"lunes\":\n",
+    "    case \"lunes\" | \"luneses\":\n",
     "        task = \"Hacer la compra\"\n",
     "    case \"martes\":\n",
     "        task = \"Ir al gimnasio\"\n",
@@ -528,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +624,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "notas = notas + [5,7,8,3,4,5,\"l\",-3.0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +647,23 @@
       "Recorriendo nota 9\n",
       "Aprobado\n",
       "Recorriendo nota 10\n",
-      "Aprobado\n"
+      "Aprobado\n",
+      "Recorriendo nota 5\n",
+      "Aprobado\n",
+      "Recorriendo nota 7\n",
+      "Aprobado\n",
+      "Recorriendo nota 8\n",
+      "Aprobado\n",
+      "Recorriendo nota 3\n",
+      "Suspenso\n",
+      "Recorriendo nota 4\n",
+      "Suspenso\n",
+      "Recorriendo nota 5\n",
+      "Aprobado\n",
+      "Recorriendo nota l\n",
+      "Nota erronea\n",
+      "Recorriendo nota -3.0\n",
+      "Suspenso\n"
      ]
     }
    ],
@@ -633,7 +671,9 @@
     "for nota in notas: # nota = notas[0..]\n",
     "    # print(notas)\n",
     "    print(\"Recorriendo nota\", nota)\n",
-    "    if nota >= 5:\n",
+    "    if not isinstance(nota, int) and not isinstance(nota, float):\n",
+    "        print('Nota erronea')\n",
+    "    elif nota >= 5:\n",
     "        print(\"Aprobado\")\n",
     "    else:\n",
     "        print(\"Suspenso\")"
@@ -1254,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1303,7 @@
        "3"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1275,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1295,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1304,7 +1344,7 @@
        "[0, 1, 2]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1387,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1396,7 +1436,7 @@
        "[(0, 'Pedro'), (1, 'Mariano'), (2, 'Jose Luis')]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1408,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1426,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1766,11 +1806,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 5, 9, 13, 17, 21, 25, 29, 33, 37, 41, 45, 49, 53, 57, 61, 65, 69]\n",
+      "El número 9 es multiplo de 3 y está en la posicion  2\n",
+      "El número 21 es multiplo de 3 y está en la posicion  5\n",
+      "El número 33 es multiplo de 3 y está en la posicion  8\n",
+      "El número 45 es multiplo de 3 y está en la posicion  11\n",
+      "El número 57 es multiplo de 3 y está en la posicion  14\n",
+      "El número 69 es multiplo de 3 y está en la posicion  17\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "numeros = range(1,70,4)\n",
+    "print(list(numeros))\n",
+    "for ndx, numero in enumerate(numeros):\n",
+    "    if numero % 3 == 0:\n",
+    "        print(f\"El número {numero} es multiplo de 3 y está en la posicion  {ndx}\")"
    ]
   },
   {
@@ -1936,9 +1994,42 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "He doblado 1 y tiene un grosor de 0.002 metros\n",
+      "He doblado 2 y tiene un grosor de 0.004 metros\n",
+      "He doblado 3 y tiene un grosor de 0.008 metros\n",
+      "He doblado 4 y tiene un grosor de 0.016 metros\n",
+      "He doblado 5 y tiene un grosor de 0.032 metros\n",
+      "He doblado 6 y tiene un grosor de 0.064 metros\n",
+      "He doblado 7 y tiene un grosor de 0.128 metros\n",
+      "He doblado 8 y tiene un grosor de 0.256 metros\n",
+      "He doblado 9 y tiene un grosor de 0.512 metros\n",
+      "He doblado 10 y tiene un grosor de 1.024 metros\n",
+      "He doblado 11 y tiene un grosor de 2.048 metros\n",
+      "He doblado 12 y tiene un grosor de 4.096 metros\n",
+      "He doblado 13 y tiene un grosor de 8.192 metros\n",
+      "Se ha doblado 13 veces hasta alcanzar los 5 metros de espesor\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "# AQUÍ VA VUESTRO CÓDIGO\n",
+    "MM = 0.001 # En metros\n",
+    "grosor = 1 * MM\n",
+    "dobleces = 0\n",
+    "while grosor < 5:\n",
+    "    # doblamos el papel\n",
+    "    grosor = grosor * 2\n",
+    "    \n",
+    "    # incrementamos las dobleces\n",
+    "    dobleces += 1\n",
+    "    print(f\"He doblado {dobleces} y tiene un grosor de {grosor} metros\")\n",
+    "    \n",
+    "print(f\"Se ha doblado {dobleces} veces hasta alcanzar los 5 metros de espesor\")"
    ]
   },
   {
@@ -2357,7 +2448,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.4 64-bit",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -2371,12 +2462,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "90139cb9a825bf3d63f6f6704e828dbd1ff7edbd4d0c6e906a71235d6efc74af"
-   }
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
