--- a/1-Ramp_Up/Python/4-Funciones/Teoria/Funciones.ipynb
+++ b/1-Ramp_Up/Python/4-Funciones/Teoria/Funciones.ipynb
@@ -733,7 +733,74 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "def ir_montana(hace_bueno, lista_personas):\n",
+    "    if hace_bueno:\n",
+    "        if len(lista_personas)>=2:\n",
+    "            return lista_personas[0]\n",
+    "        else:\n",
+    "            return \"A la montaña solo o en pareja\"\n",
+    "    else:\n",
+    "        return \"No podemos ir\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'No podemos ir'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ir_montana(False,[])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A la montaña solo o en pareja'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ir_montana(True,[])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Antonio'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ir_montana(True,[\"Antonio\", \"Juan\"])"
    ]
   },
   {
@@ -1490,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1498,11 +1565,12 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "    Funcion que multiplica los dos argumentos: x*y\n",
+      "    Función que multiplica los dos argumentos: x*y\n",
+      "\n",
       "    Inputs:\n",
       "        x: float\n",
       "        y: float\n",
-      "        \n",
+      "\n",
       "    Output:\n",
       "        x * y: float\n",
       "    \n"
@@ -1513,6 +1581,7 @@
     "def multiplica(x:float, y:float):\n",
     "    '''\n",
     "    Función que multiplica los dos argumentos: x*y\n",
+    "    \n",
     "    Inputs:\n",
     "        x: float\n",
     "        y: float\n",
@@ -1625,7 +1694,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.4 64-bit",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1639,12 +1708,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "90139cb9a825bf3d63f6f6704e828dbd1ff7edbd4d0c6e906a71235d6efc74af"
-   }
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
