--- a/1-Ramp_Up/Python/Repaso/Ejercicio de repaso - Funciones y clases.ipynb
+++ b/1-Ramp_Up/Python/Repaso/Ejercicio de repaso - Funciones y clases.ipynb
@@ -22,10 +22,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "edad = 10\n",
+    "poblacion = \"Lekeitio\"\n",
+    "altura = 1.77\n",
+    "s_operativo = True\n",
+    "nada = None\n",
+    "lista_vacaciones = [\"Boston\", \"Río de Janeiro\", \"Mexico DF\"]\n",
+    "tupla_isla = (\"navaja\", \"agua\", \"anzuelo\")\n",
+    "dict_pc = {\"marca\":\"HP\", \"ram\":16}\n",
+    "lista_examen = list()\n",
+    "lista_examen.append(edad)\n",
+    "lista_examen.append(poblacion)\n",
+    "lista_examen.append(altura)\n",
+    "lista_examen.append(s_operativo)\n",
+    "lista_examen.append(nada)\n",
+    "lista_examen.append(lista_vacaciones)\n",
+    "lista_examen.append(tupla_isla)\n",
+    "lista_examen.append(dict_pc)\n",
+    "lon_lista_examen = len(lista_examen)\n",
+    "print(lon_lista_examen)"
+   ]
   },
   {
    "attachments": {},
@@ -65,11 +93,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "res21 Mexico DF\n",
+      "res22 agua\n",
+      "res23 Lek\n",
+      "res24 ['HP', 16, [False, False, True]]\n",
+      "res25 {'marca': 'HP', 'ram': 16, 's_operativo': [False, False, True]}\n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "\"\"\"\n",
+    "1. Guardar en las variables, sin uso de funciones (puedes usar print) ni bucles: \n",
+    "    - `res21` El tercer destino de vacaciones\n",
+    "    - `res22` El penúltimo objeto que te llevarías a una isla para todo tipo de longitudes de listados.\n",
+    "    - `res23` Los 3 primeros caracteres de la población de nacimiento.\n",
+    "    - `res24` Una lista de los valores del diccionario de tu pc.\n",
+    "    - `res25` Guardar dentro del diccionario dentro de `lista_examen` una nueva clave llamada `s_operativo` con una lista de 3 booleanos, True si es Windows, de tus últimos 3 pcs. \n",
+    "\"\"\"\n",
+    "res21 = lista_examen[5][2]\n",
+    "print(\"res21\", res21)\n",
+    "res22 = lista_examen[6][-2]\n",
+    "print(\"res22\", res22)\n",
+    "res23 = lista_examen[1][0:3]\n",
+    "print(\"res23\", res23)\n",
+    "res24 = list(lista_examen[7].values())\n",
+    "print(\"res24\", res24)\n",
+    "lista_examen[7][\"s_operativo\"]=[False, False, True]\n",
+    "res25 = lista_examen[7]\n",
+    "print(\"res25\", res25)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 Lekeitio\n",
+      "3 True\n",
+      "5 ['Boston', 'Río de Janeiro', 'Mexico DF']\n",
+      "7 {'marca': 'HP', 'ram': 16, 's_operativo': [False, False, True]}\n",
+      "------------------------------\n",
+      "{'marca': 'HP', 'ram': 16, 's_operativo': [False, False, True]}\n",
+      "('navaja', 'agua', 'anzuelo')\n",
+      "['Boston', 'Río de Janeiro', 'Mexico DF']\n",
+      "None\n",
+      "True\n",
+      "1.77\n",
+      "Lekeitio\n",
+      "10\n",
+      "------------------------------\n",
+      "('navaja', 'agua', 'anzuelo')\n",
+      "['Boston', 'Río de Janeiro', 'Mexico DF']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "2. Mostrar por pantalla, con uso de un bucle `for`:\n",
+    "    - Las posiciones y elementos de `lista_examen` de las posiciones impares.\n",
+    "    - Todos los elementos de `lista_examen` al revés.\n",
+    "    - Todos aquellos elementos que sean colecciones ordenadas de `lista_examen`, si no lo son, imprimir el tipo.\n",
+    "\"\"\"\n",
+    "\n",
+    "for position in range(1,len(lista_examen),2):\n",
+    "    print(position, lista_examen[position])\n",
+    "print(30*\"-\")    \n",
+    "lista_al_reves = lista_examen.copy()\n",
+    "lista_al_reves.reverse()\n",
+    "for elemento in lista_al_reves:\n",
+    "    print(elemento)\n",
+    "print(30*\"-\")\n",
+    "for elemento in lista_al_reves:\n",
+    "    if isinstance(elemento, (list, tuple)):\n",
+    "        print(elemento)\n",
+    "    "
    ]
   },
   {
@@ -141,7 +249,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -155,14 +263,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.9"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "abc9fc88bc0e5c548c5da0f33af674c000293e7a58ee42428ace4cfa52bc0e99"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
