modificaciones Ejercicios_numpy_I y Ejercicios_Numpy_II

--- a/2-Data Analysis/1-Series y algebra/Practica/Ejercicios_Numpy_II.ipynb
+++ b/2-Data Analysis/1-Series y algebra/Practica/Ejercicios_Numpy_II.ipynb
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -618,6 +618,18 @@
       " [1 0 0 0 0 1]\n",
       " [1 1 1 1 1 1]] \n",
       "\n",
+      "[[1 1 1 1 1 1]\n",
+      " [1 0 0 0 0 1]\n",
+      " [1 0 0 0 0 1]\n",
+      " [1 0 0 0 0 1]\n",
+      " [1 0 0 0 0 1]\n",
+      " [1 1 1 1 1 1]]\n",
+      "[[1 1 1 1 1 1]\n",
+      " [1 1 1 1 1 1]\n",
+      " [1 1 1 1 1 1]\n",
+      " [1 1 1 1 1 1]\n",
+      " [1 1 1 1 1 1]\n",
+      " [1 1 1 1 1 1]]\n",
       "[[1 1 1 1 1 1]\n",
       " [1 0 0 0 0 1]\n",
       " [1 0 0 0 0 1]\n",
@@ -645,6 +657,15 @@
     "matriz.loc[matriz.index.start]=1 #pongo a 1 la primera fila\n",
     "matriz.loc[matriz.index.stop-1]=1 #pongo a 1 la última fila\n",
     "print(matriz.values)\n",
+    "\n",
+    "\n",
+    "matriz = np.ones(shape=(orden,orden), dtype=np.int8)\n",
+    "print(matriz)\n",
+    "matriz[1:matriz.shape[0]-1,1:matriz.shape[1]-1]=0\n",
+    "print(matriz)\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -668,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +903,11 @@
       "\n",
       "Compruebo que la suma del vector y el vector inverso tiene valor 0 en los elementos filtrados. El resto de valores del vector los dejo igual:\n",
       " [ 0  1  2  0  0  0  0  0  0  9 10] \n",
-      "\n"
+      "\n",
+      "[ -5  -6  -7  -8  -9 -10 -11]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10]\n",
+      "[ 0  1  2 -4 -5 -6 -7 -8 -9  9 10]\n",
+      "[ -1  -2  -3  -4  -5  -6  -7  -8  -9 -10 -11]\n"
      ]
     }
    ],
@@ -908,7 +933,14 @@
     "vector_negado = np.where(patron_filtrado, vector*-1, np.zeros(11, dtype=np.int8)).copy()\n",
     "print(\"3. Crea un nuevo array que niegue todos los elementos entre el 3 y el 8:\\n\", vector_negado, \"\\n\")\n",
     "\n",
-    "print(\"Compruebo que la suma del vector y el vector inverso tiene valor 0 en los elementos filtrados. El resto de valores del vector los dejo igual:\\n\", vector + vector_negado , \"\\n\")\n"
+    "print(\"Compruebo que la suma del vector y el vector inverso tiene valor 0 en los elementos filtrados. El resto de valores del vector los dejo igual:\\n\", vector + vector_negado , \"\\n\")\n",
+    "\n",
+    "print(~vector[4:])\n",
+    "vector2 = vector.copy()\n",
+    "vector2[patron_filtrado]=~vector[patron_filtrado]\n",
+    "print(vector)\n",
+    "print(vector2)\n",
+    "print(~vector)"
    ]
   }
  ],
