--- a/2-Data Analysis/2-Dataframes y estadística/Teoría/3-Agrupaciones.ipynb
+++ b/2-Data Analysis/2-Dataframes y estadística/Teoría/3-Agrupaciones.ipynb
@@ -6482,7 +6482,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Emeplo: Datos de nacimiento\n",
+    "## Ejemplo: Datos de nacimiento\n",
     "\n",
     "Como ejemplo más interesante, veamos los datos de libre acceso sobre los nacimientos en Estados Unidos, proporcionados por los Centros de Control de Enfermedades (CDC).\n",
     "Estos datos pueden encontrarse en https://raw.githubusercontent.com/jakevdp/data-CDCbirths/master/births.csv\n",
