--- a/2-Data Analysis/2-Dataframes y estadística/Teoría/2-Null_Values.ipynb
+++ b/2-Data Analysis/2-Dataframes y estadística/Teoría/2-Null_Values.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -222,14 +222,15 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "dtype('float64')"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m vals2 = \u001b[43mnp\u001b[49m.array([\u001b[32m1\u001b[39m, np.nan, \u001b[32m3\u001b[39m, \u001b[32m4\u001b[39m]) \n\u001b[32m      2\u001b[39m vals2.dtype\n",
+      "\u001b[31mNameError\u001b[39m: name 'np' is not defined"
+     ]
     }
    ],
    "source": [
@@ -687,6 +688,11 @@
   },
   {
    "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1781,7 +1787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1807,7 +1813,8 @@
    ],
    "source": [
     "# forward-fill\n",
-    "data.fillna(method='ffill')"
+    "data.fillna(method='ffill')\n",
+    "#mete el valor anterior al NaN"
    ]
   },
   {
@@ -1820,7 +1827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1846,7 +1853,8 @@
    ],
    "source": [
     "# back-fill\n",
-    "data.fillna(method='bfill')"
+    "data.fillna(method='bfill')\n",
+    "#mete el valor siguiente al NaN"
    ]
   },
   {
@@ -2486,7 +2494,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3.7.9 64-bit",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -2500,12 +2508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "ec2a379ed5c25334a484232182c9d38ef8bd9861e2542d0c517568c4f99a9a7c"
-   }
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
